--- a/about.html
+++ b/about.html
@@ -219,13 +219,13 @@
         
         <div class="">
           <img src="images/about.jpg" class="w-screen" alt="">
-          <h1 class="font-bold flex justify-center bottom-20 md:bottom-40 lg:bottom-52 xl:bottom-72 relative z-50 text-xl md:text-3xl lg:text-5xl xl:text-7xl">About <span class="text-bloom-orange ml-1 lg:ml-2">us</span></h1> 
+          <h1 class="font-bold flex justify-center bottom-20 md:bottom-40 lg:bottom-52 xl:bottom-72 relative z-50 text-xl md:text-3xl lg:text-5xl">About <span class="text-bloom-orange ml-1 lg:ml-2">us</span></h1> 
         </div>
       <!-- /About us -->
 
       <!-- Who are we -->
       <div class="mt-10 md:mt-20">
-        <h1 class="text-2xl md:text-4xl xl:text-6xl font-bold text-center">Who are we</h1>
+        <h1 class="text-2xl md:text-4xl font-bold text-center">Who are we</h1>
         <div class="hidden md:flex justify-center md:relative bottom-5 right-20 -z-40">
           <svg width="142" height="33" viewBox="0 0 142 33" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect width="142" height="33" fill="#FF8100"/>
@@ -235,11 +235,12 @@
       <!-- /Who are we-->
 
       
-      <div class="mx-8 md:mx-12 lg:mx-24 font-medium text-center md:text-left text-base md:text-xl lg:text-2xl xl:text-4xl">
+      <div class="mx-8 md:mx-12 lg:mx-24 font-medium text-center md:text-left text-base md:text-xl lg:text-2xl">
         <p class="mt-16 md:mt-20 ">
           Bloom Digital Media is a team of specialists who works with Nigeria's leading brands 
           to deliver the best digital experience to the right audience.
         </p>
+
         <p class="mt-10">
           We combine marketing, buyer's psychology, and design thinking to increase the sales and engagement of businesses like yours. 
           We don't just come up with what's cool; we craft the message that aligns with your prospects desires. We would love to talk.
