--- a/contactus.html
+++ b/contactus.html
@@ -17,7 +17,7 @@
   <body class="bg-bloom-black text-white justify-between items-center">
     <!-- HEADER -->
     <nav class="p-5 z-40">
-      <div class="mx-15 flex justify-between">
+      <div class="mx-15 flex justify-between items-stretch">
         <!-- BLOOM LOGO -->
         <a href="index.html">
           <span class="flex justify-between">
@@ -88,52 +88,91 @@
 
         <!-- MAIN MENU -->
         <ul
-          class="z-40 hidden md:flex lg:space-x-4 lg:mr-24 md:items-end w-full text-xs xl:text-lg md:w-auto md:py-0 py-4 lg:pl-0 pl-7"
+          id="id"
+          class="z-40 hidden md:flex md:items-end w-full text-xs xl:text-lg md:w-auto md:py-0 py-4 lg:pl-0 pl-7"
         >
           <li>
             <a
               href="about.html"
-              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-medium"
+              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-bold"
               >ABOUT US</a
             >
           </li>
           <li>
             <a
               href="services.html"
-              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-medium"
+              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-bold"
               >OUR SERVICES</a
             >
           </li>
           <li>
             <a
               href="ourworks.html"
-              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-medium"
+              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-bold"
               >OUR WORKS</a
             >
           </li>
           <li>
             <a
               href="blog.html"
-              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-medium"
+              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-bold"
               >BLOG</a
             >
           </li>
           <li>
             <a
               href="contactus.html"
-              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-medium"
+              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-bold"
               >CONTACT US</a
             >
           </li>
           <li>
             <a
               href="faq.html"
-              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-medium"
+              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-bold"
               >FAQ</a
             >
           </li>
         </ul>
         <!-- /MAIN MENU -->
+
+        <!-- INSTAGRAM SVG -->
+        <div class="mt-2 flex space-x-4 hidden lg:flex md:items-center">
+          <svg
+            class="inline fill-bloom-orange mt-2"
+            width="24px"
+            height="24px"
+            viewBox="0 0 32 32"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M16 0c-4.349 0-4.891 0.021-6.593 0.093-1.709 0.084-2.865 0.349-3.885 0.745-1.052 0.412-1.948 0.959-2.833 1.849-0.891 0.885-1.443 1.781-1.849 2.833-0.396 1.020-0.661 2.176-0.745 3.885-0.077 1.703-0.093 2.244-0.093 6.593s0.021 4.891 0.093 6.593c0.084 1.704 0.349 2.865 0.745 3.885 0.412 1.052 0.959 1.948 1.849 2.833 0.885 0.891 1.781 1.443 2.833 1.849 1.020 0.391 2.181 0.661 3.885 0.745 1.703 0.077 2.244 0.093 6.593 0.093s4.891-0.021 6.593-0.093c1.704-0.084 2.865-0.355 3.885-0.745 1.052-0.412 1.948-0.959 2.833-1.849 0.891-0.885 1.443-1.776 1.849-2.833 0.391-1.020 0.661-2.181 0.745-3.885 0.077-1.703 0.093-2.244 0.093-6.593s-0.021-4.891-0.093-6.593c-0.084-1.704-0.355-2.871-0.745-3.885-0.412-1.052-0.959-1.948-1.849-2.833-0.885-0.891-1.776-1.443-2.833-1.849-1.020-0.396-2.181-0.661-3.885-0.745-1.703-0.077-2.244-0.093-6.593-0.093zM16 2.88c4.271 0 4.781 0.021 6.469 0.093 1.557 0.073 2.405 0.333 2.968 0.553 0.751 0.291 1.276 0.635 1.844 1.197 0.557 0.557 0.901 1.088 1.192 1.839 0.22 0.563 0.48 1.411 0.553 2.968 0.072 1.688 0.093 2.199 0.093 6.469s-0.021 4.781-0.099 6.469c-0.084 1.557-0.344 2.405-0.563 2.968-0.303 0.751-0.641 1.276-1.199 1.844-0.563 0.557-1.099 0.901-1.844 1.192-0.556 0.22-1.416 0.48-2.979 0.553-1.697 0.072-2.197 0.093-6.479 0.093s-4.781-0.021-6.48-0.099c-1.557-0.084-2.416-0.344-2.979-0.563-0.76-0.303-1.281-0.641-1.839-1.199-0.563-0.563-0.921-1.099-1.197-1.844-0.224-0.556-0.48-1.416-0.563-2.979-0.057-1.677-0.084-2.197-0.084-6.459 0-4.26 0.027-4.781 0.084-6.479 0.083-1.563 0.339-2.421 0.563-2.979 0.276-0.761 0.635-1.281 1.197-1.844 0.557-0.557 1.079-0.917 1.839-1.199 0.563-0.219 1.401-0.479 2.964-0.557 1.697-0.061 2.197-0.083 6.473-0.083zM16 7.787c-4.541 0-8.213 3.677-8.213 8.213 0 4.541 3.677 8.213 8.213 8.213 4.541 0 8.213-3.677 8.213-8.213 0-4.541-3.677-8.213-8.213-8.213zM16 21.333c-2.948 0-5.333-2.385-5.333-5.333s2.385-5.333 5.333-5.333c2.948 0 5.333 2.385 5.333 5.333s-2.385 5.333-5.333 5.333zM26.464 7.459c0 1.063-0.865 1.921-1.923 1.921-1.063 0-1.921-0.859-1.921-1.921 0-1.057 0.864-1.917 1.921-1.917s1.923 0.86 1.923 1.917z"
+            />
+          </svg>
+          <svg
+            class="inline fill-bloom-orange mt-2"
+            width="24px"
+            height="24px"
+            viewBox="0 0 32 32"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M16 0c-4.349 0-4.891 0.021-6.593 0.093-1.709 0.084-2.865 0.349-3.885 0.745-1.052 0.412-1.948 0.959-2.833 1.849-0.891 0.885-1.443 1.781-1.849 2.833-0.396 1.020-0.661 2.176-0.745 3.885-0.077 1.703-0.093 2.244-0.093 6.593s0.021 4.891 0.093 6.593c0.084 1.704 0.349 2.865 0.745 3.885 0.412 1.052 0.959 1.948 1.849 2.833 0.885 0.891 1.781 1.443 2.833 1.849 1.020 0.391 2.181 0.661 3.885 0.745 1.703 0.077 2.244 0.093 6.593 0.093s4.891-0.021 6.593-0.093c1.704-0.084 2.865-0.355 3.885-0.745 1.052-0.412 1.948-0.959 2.833-1.849 0.891-0.885 1.443-1.776 1.849-2.833 0.391-1.020 0.661-2.181 0.745-3.885 0.077-1.703 0.093-2.244 0.093-6.593s-0.021-4.891-0.093-6.593c-0.084-1.704-0.355-2.871-0.745-3.885-0.412-1.052-0.959-1.948-1.849-2.833-0.885-0.891-1.776-1.443-2.833-1.849-1.020-0.396-2.181-0.661-3.885-0.745-1.703-0.077-2.244-0.093-6.593-0.093zM16 2.88c4.271 0 4.781 0.021 6.469 0.093 1.557 0.073 2.405 0.333 2.968 0.553 0.751 0.291 1.276 0.635 1.844 1.197 0.557 0.557 0.901 1.088 1.192 1.839 0.22 0.563 0.48 1.411 0.553 2.968 0.072 1.688 0.093 2.199 0.093 6.469s-0.021 4.781-0.099 6.469c-0.084 1.557-0.344 2.405-0.563 2.968-0.303 0.751-0.641 1.276-1.199 1.844-0.563 0.557-1.099 0.901-1.844 1.192-0.556 0.22-1.416 0.48-2.979 0.553-1.697 0.072-2.197 0.093-6.479 0.093s-4.781-0.021-6.48-0.099c-1.557-0.084-2.416-0.344-2.979-0.563-0.76-0.303-1.281-0.641-1.839-1.199-0.563-0.563-0.921-1.099-1.197-1.844-0.224-0.556-0.48-1.416-0.563-2.979-0.057-1.677-0.084-2.197-0.084-6.459 0-4.26 0.027-4.781 0.084-6.479 0.083-1.563 0.339-2.421 0.563-2.979 0.276-0.761 0.635-1.281 1.197-1.844 0.557-0.557 1.079-0.917 1.839-1.199 0.563-0.219 1.401-0.479 2.964-0.557 1.697-0.061 2.197-0.083 6.473-0.083zM16 7.787c-4.541 0-8.213 3.677-8.213 8.213 0 4.541 3.677 8.213 8.213 8.213 4.541 0 8.213-3.677 8.213-8.213 0-4.541-3.677-8.213-8.213-8.213zM16 21.333c-2.948 0-5.333-2.385-5.333-5.333s2.385-5.333 5.333-5.333c2.948 0 5.333 2.385 5.333 5.333s-2.385 5.333-5.333 5.333zM26.464 7.459c0 1.063-0.865 1.921-1.923 1.921-1.063 0-1.921-0.859-1.921-1.921 0-1.057 0.864-1.917 1.921-1.917s1.923 0.86 1.923 1.917z"
+            />
+          </svg>
+          <svg
+            class="inline fill-bloom-orange mt-2"
+            width="24px"
+            height="24px"
+            viewBox="0 0 32 32"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M16 0c-4.349 0-4.891 0.021-6.593 0.093-1.709 0.084-2.865 0.349-3.885 0.745-1.052 0.412-1.948 0.959-2.833 1.849-0.891 0.885-1.443 1.781-1.849 2.833-0.396 1.020-0.661 2.176-0.745 3.885-0.077 1.703-0.093 2.244-0.093 6.593s0.021 4.891 0.093 6.593c0.084 1.704 0.349 2.865 0.745 3.885 0.412 1.052 0.959 1.948 1.849 2.833 0.885 0.891 1.781 1.443 2.833 1.849 1.020 0.391 2.181 0.661 3.885 0.745 1.703 0.077 2.244 0.093 6.593 0.093s4.891-0.021 6.593-0.093c1.704-0.084 2.865-0.355 3.885-0.745 1.052-0.412 1.948-0.959 2.833-1.849 0.891-0.885 1.443-1.776 1.849-2.833 0.391-1.020 0.661-2.181 0.745-3.885 0.077-1.703 0.093-2.244 0.093-6.593s-0.021-4.891-0.093-6.593c-0.084-1.704-0.355-2.871-0.745-3.885-0.412-1.052-0.959-1.948-1.849-2.833-0.885-0.891-1.776-1.443-2.833-1.849-1.020-0.396-2.181-0.661-3.885-0.745-1.703-0.077-2.244-0.093-6.593-0.093zM16 2.88c4.271 0 4.781 0.021 6.469 0.093 1.557 0.073 2.405 0.333 2.968 0.553 0.751 0.291 1.276 0.635 1.844 1.197 0.557 0.557 0.901 1.088 1.192 1.839 0.22 0.563 0.48 1.411 0.553 2.968 0.072 1.688 0.093 2.199 0.093 6.469s-0.021 4.781-0.099 6.469c-0.084 1.557-0.344 2.405-0.563 2.968-0.303 0.751-0.641 1.276-1.199 1.844-0.563 0.557-1.099 0.901-1.844 1.192-0.556 0.22-1.416 0.48-2.979 0.553-1.697 0.072-2.197 0.093-6.479 0.093s-4.781-0.021-6.48-0.099c-1.557-0.084-2.416-0.344-2.979-0.563-0.76-0.303-1.281-0.641-1.839-1.199-0.563-0.563-0.921-1.099-1.197-1.844-0.224-0.556-0.48-1.416-0.563-2.979-0.057-1.677-0.084-2.197-0.084-6.459 0-4.26 0.027-4.781 0.084-6.479 0.083-1.563 0.339-2.421 0.563-2.979 0.276-0.761 0.635-1.281 1.197-1.844 0.557-0.557 1.079-0.917 1.839-1.199 0.563-0.219 1.401-0.479 2.964-0.557 1.697-0.061 2.197-0.083 6.473-0.083zM16 7.787c-4.541 0-8.213 3.677-8.213 8.213 0 4.541 3.677 8.213 8.213 8.213 4.541 0 8.213-3.677 8.213-8.213 0-4.541-3.677-8.213-8.213-8.213zM16 21.333c-2.948 0-5.333-2.385-5.333-5.333s2.385-5.333 5.333-5.333c2.948 0 5.333 2.385 5.333 5.333s-2.385 5.333-5.333 5.333zM26.464 7.459c0 1.063-0.865 1.921-1.923 1.921-1.063 0-1.921-0.859-1.921-1.921 0-1.057 0.864-1.917 1.921-1.917s1.923 0.86 1.923 1.917z"
+            />
+          </svg>
+        </div>
+        <!-- /INSTAGRAM SVG -->
 
         <!-- DROPDOWN MENU -->
         <span
@@ -161,7 +200,7 @@
       <div>
         <!-- MOBILE MENU -->
         <ul
-          class="flex-col items-start md:hidden hidden transition-all ease-in-out delay-500 duration-700"
+          class="flex-col items-end md:hidden hidden transition-all ease-in-out delay-500 duration-700"
           id="mobile-menu"
         >
           <li>
@@ -216,8 +255,12 @@
     <section class="mx-8 md:mx-12 lg:mx-24 mb-96 md:pb-96">
       <!-- Contact us -->
       <div class="mt-10 md:mt-20 relative">
-        <h1 class="text-2xl md:text-4xl font-bold md:relative text-center">Contact us</h1>
-        <div class="hidden md:flex justify-center md:relative bottom-5 right-20 -z-40">
+        <h1 class="text-2xl md:text-4xl font-bold md:relative text-center">
+          Contact us
+        </h1>
+        <div
+          class="hidden md:flex justify-center md:relative bottom-5 right-20 -z-40"
+        >
           <svg
             width="128"
             height="32"
@@ -231,22 +274,23 @@
       </div>
       <!-- /Contact us -->
 
-
       <div class="mt-16 md:mt-24 lg:mt-32">
-        <p class="font-semibold text-center lg:text-left text-xl md:text-3xl lg:text-4xl">
+        <p
+          class="font-semibold text-center lg:text-left text-xl md:text-3xl lg:text-4xl"
+        >
           Have a chat with our best specialist now<span
             class="text-bloom-orange"
             >.</span
           >
         </p>
 
-        <p class="mt-16 lg:mt-24 text-center lg:text-left font-semibold text-base">
+        <p
+          class="mt-16 lg:mt-24 text-center lg:text-left font-semibold text-base"
+        >
           Help us understand what you need by filling out the form, or email
-          <br/>@bloomdigitmedia.com with your enquiry and we’ll be in touch.
+          <br />@bloomdigitmedia.com with your enquiry and we’ll be in touch.
         </p>
       </div>
-
-
 
       <!-- Eclipse svg 01-->
       <div class="hidden md:block md:relative md:-z-50 md:right-14 md:top-48">
@@ -268,7 +312,10 @@
         <div
           class="md:basis-1/2 md:h-[37.5rem] lg:h-[40rem] mb-24 border bg-bloom-black/50 backdrop-blur-2xl h-3/4 border-gray-600"
         >
-          <form action="" class="mt-14 md:mt-24 font-semibold text-sm md:text-base mx-4 md:mx-8">
+          <form
+            action=""
+            class="mt-14 md:mt-24 font-semibold text-sm md:text-base mx-4 md:mx-8"
+          >
             <input
               type="text"
               placeholder="Name"
@@ -302,7 +349,7 @@
           <!-- Send Button -->
           <button
             type="submit"
-            class="text-bloom-orange text-base md:text-xl lg:text-2xl font-bold m-4 mb-8 md:m-8 lg:m-8 py-2 lg:py-4 px-8 md:px-10 lg:px-16 bg-white"
+            class="text-bloom-orange text-base md:text-xl lg:text-2xl font-bold m-4 mb-8 md:m-8 lg:m-8 py-2 lg:py-4 px-8 md:px-10 lg:px-16 bg-white hover:bg-bloom-orange"
           >
             Send
           </button>
@@ -314,7 +361,9 @@
         <div
           class="md:basis-1/2 md:max-w-full text-xs md:text-base border backdrop-blur-2xl md:h-[37.5rem] lg:h-[40rem] bg-black/30 border-gray-600"
         >
-          <div class="flex justify-start space-x-4 mt-14 md:mt-24 mx-4 md:mx-8 my-10">
+          <div
+            class="flex justify-start space-x-4 mt-14 md:mt-24 mx-4 md:mx-8 my-10"
+          >
             <svg
               width="24"
               height="31"
@@ -333,7 +382,9 @@
             </p>
           </div>
 
-          <div class="flex justify-start space-x-4 mt-14 md:mt-16 mx-4 md:mx-8 my-10">
+          <div
+            class="flex justify-start space-x-4 mt-14 md:mt-16 mx-4 md:mx-8 my-10"
+          >
             <svg
               width="24"
               height="31"
@@ -351,12 +402,12 @@
               />
             </svg>
 
-            <p class="mr-40 font-semi-bold">
-              info@bloomdigitmedia.com
-            </p>
+            <p class="mr-40 font-semi-bold">info@bloomdigitmedia.com</p>
           </div>
 
-          <div class="flex justify-start space-x-4 mt-14 md:mt-16 mx-4 md:mx-8 my-10">
+          <div
+            class="flex justify-start space-x-4 mt-14 md:mt-16 mx-4 md:mx-8 my-10"
+          >
             <svg
               width="24"
               height="31"
@@ -370,9 +421,7 @@
               />
             </svg>
 
-            <p class="mr-24 font-semi-bold">
-              +2347086278644, +2347031380418
-            </p>
+            <p class="mr-24 font-semi-bold">+2347086278644, +2347031380418</p>
           </div>
         </div>
       </div>
@@ -395,26 +444,26 @@
       <!-- /Eclipse svg 02-->
 
       <!-- Eclipse svg 03-->
-      <div  class="hidden md:block relative">
+      <div class="hidden md:block relative">
         <div class="absolute -z-50 -bottom-0 -right-12 lg:-right-24">
-            <svg
+          <svg
             width="204"
             height="417"
             viewBox="0 0 204 417"
             fill="none"
-            xmlns="http://www.w3.org/2000/svg">
+            xmlns="http://www.w3.org/2000/svg"
+          >
             <path
-                d="M159.271 35.5689C191.059 11.981 209.559 -0.535704 224.797 0.525938C257.298 2.79028 326.418 14.756 342.889 
+              d="M159.271 35.5689C191.059 11.981 209.559 -0.535704 224.797 0.525938C257.298 2.79028 326.418 14.756 342.889 
                 44.5044C363.479 81.6897 375.059 148.761 375.059 213.981C375.059 243.981 388.059 277.481 367.559 312.981C331.708 
                 375.065 339.228 350.269 293.059 394.981C246.89 439.693 147.161 404.951 85.3537 374.964C23.5466 
                 344.977 -18.8338 256.22 9.25103 168.696C37.3359 81.1724 118.562 65.7768 159.271 35.5689Z"
-                fill="#64CE75"/>
-            </svg>
+              fill="#64CE75"
+            />
+          </svg>
         </div>
       </div>
       <!-- /Eclipse svg 03-->
-
-      
     </section>
     <!-- /BODY -->
 
