--- a/index.html
+++ b/index.html
@@ -94,42 +94,42 @@
           <li>
             <a
               href="about.html"
-              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-medium"
+              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-bold"
               >ABOUT US</a
             >
           </li>
           <li>
             <a
               href="services.html"
-              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-medium"
+              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-bold"
               >OUR SERVICES</a
             >
           </li>
           <li>
             <a
-              href="#"
-              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-medium"
+              href="ourworks.html"
+              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-bold"
               >OUR WORKS</a
             >
           </li>
           <li>
             <a
               href="blog.html"
-              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-medium"
+              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-bold"
               >BLOG</a
             >
           </li>
           <li>
             <a
-              href="contact.html"
-              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-medium"
+              href="contactus.html"
+              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-bold"
               >CONTACT US</a
             >
           </li>
           <li>
             <a
               href="faq.html"
-              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-medium"
+              class="hover:text-bloom-orange block py-2 pr-5 mr-3 text-white font-bold"
               >FAQ</a
             >
           </li>
@@ -200,7 +200,7 @@
       <div>
         <!-- MOBILE MENU -->
         <ul
-          class="flex-col items-start md:hidden hidden transition-all ease-in-out delay-500 duration-700"
+          class="flex-col items-end md:hidden hidden transition-all ease-in-out delay-500 duration-700"
           id="mobile-menu"
         >
           <li>
@@ -233,7 +233,7 @@
           </li>
           <li>
             <a
-              href="contact.html"
+              href="contactus.html"
               class="block hover:text-bloom-orange py-2 pr-5 pl-0 mr-3 text-white font-medium"
               >CONTACT US</a
             >
@@ -360,24 +360,28 @@
         <img src="./images/Cart 1.png" alt="cart" class="img-2" id="work-img" />
         <img src="./images/Home 1.png" alt="home" class="img-3" id="work-img" />
       </div>
-      <a href="">
-        <h3 class="work-text">
+
+      <h3 class="work-text">
+        <a href="">
           View all
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-8"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-            stroke-width="2"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M17 8l4 4m0 0l-4 4m4-4H3"
-            />
-          </svg></h3
-      ></a>
+          <span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-8"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17 8l4 4m0 0l-4 4m4-4H3"
+              />
+            </svg>
+          </span>
+        </a>
+      </h3>
     </div>
     <!-- /OUR WORKS -->
 
@@ -398,6 +402,7 @@
         <img src="./images/Rectangle 49.png" alt="49" />
         <h1 class="services-h1">Our Services</h1>
       </div>
+
       <div class="services-section">
         <h2>Digital Marketing</h2>
         <h2>Branding & Design</h2>
@@ -452,8 +457,8 @@
         </div>
         <div class="testimonial-img">
           <img src="./images/Group 9.png" alt="9" class="first-img" />
-          <img src="./images/Group 10.png" alt="10" class="second-img"/>
-          <img src="./images/Group 11.png" alt="11" class="third-img"/>
+          <img src="./images/Group 10.png" alt="10" class="second-img" />
+          <img src="./images/Group 11.png" alt="11" class="third-img" />
         </div>
       </div>
     </div>
