Fixed some styling Bug
Co-Authored-By: David Aremu <66888450+kingola1@users.noreply.github.com>

--- a/services.html
+++ b/services.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/custom_style.css" />
     <title>Services</title>
   </head>
   <body class="bg-bloom-black text-white">
@@ -88,7 +89,7 @@
 
         <!-- MAIN MENU -->
         <ul
-        id="id"
+          id="id"
           class="z-40 hidden md:flex md:items-end w-full text-xs xl:text-lg md:w-auto md:py-0 py-4 lg:pl-0 pl-7"
         >
           <li>
@@ -350,6 +351,12 @@
     <!-- /MARKETING & PR -->
     <!-- /OUR SERVICES -->
 
+    <!-- DUMMY DIV FOR CLASSES -->
+    <div class="col-span-2 col-span-3 col-span-4">
+      <div class="h-auto image-contain image-fit img-contain img-fit"></div>
+      <div class="row-span"></div>
+    </div>
+    <!-- DUMMY DIV FOR CLASSES -->
     <!-- FOOTER -->
     <section class="">
       <footer class="">
@@ -520,3 +527,5 @@
     <script src="js/app.js"></script>
   </body>
 </html>
+
+<div class="mt-5 mt-6 mx-6 mx-4 p-4"></div>
