Case Study Updated

--- a/blog.html
+++ b/blog.html
@@ -229,10 +229,35 @@
             </svg>
         </div>
       </div>
-      <div class="grid grid-cols-2 mb-8 mx-12 gap-4">
-        <div><img src="images/image 67a.png" alt=""></div>
-      
-        <div><img src="images/image 67b.png" alt=""></div>
+      <div class="grid grid-cols-1 md:grid-cols-2 mb-8 mx-12 md:gap-4 lg:gap-8 xl:gap-0">
+        <div>
+          <img src="images/image 67a.png" alt="">
+          <p class="text-sm font-light left-6 md:left-10 bottom-48 md:bottom-56 lg:bottom-80 xl:bottom-96 relative z-50 lg:text-lg xl:text-xl md:text-base">1 min read</p>
+          <h1 class="text-sm font-bold left-6 md:left-10 bottom-44 md:bottom-52 lg:bottom-72 xl:bottom-80 relative z-50  xl:text-3xl md:text-base lg:text-2xl ">Looking to make your <br>business better?</h1>
+          <div class="left-6 md:left-10 bottom-28 md:bottom-36 lg:bottom-48 xl:bottom-52 relative z-50">
+            <a class="flex" href="blogcontent.html">
+              <p class="font-semibold text-sm md:text-lg lg:text-xl xl:text-2xl">Read more</p>
+              <svg class="pb-4 md:pb-2 xl:pb-1 md:w-16 h-10" width="30" height="24" viewBox="0 0 60 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.5 17L51.5 17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M44.5 24L51.5 17L44.5 10" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <div class="relative bottom-20 md:bottom-0">
+          <img src="images/image 67b.png" alt="">
+          <p class="text-sm font-light left-6 md:left-10 bottom-48 md:bottom-56 lg:bottom-80 xl:bottom-96 relative z-50 lg:text-lg xl:text-xl md:text-base">1 min read</p>
+          <h1 class="text-sm font-bold left-6 md:left-10 bottom-44 md:bottom-52 lg:bottom-72 xl:bottom-80 relative z-50  xl:text-3xl md:text-base lg:text-2xl ">How to Optimize Your <br>Website for Search Engines <br>and Drive Traffic</h1>
+          <div class="left-6 md:left-10 bottom-28 md:bottom-40 lg:bottom-52 xl:bottom-64 relative z-50">
+            <a class="flex" href="blogcontent2.html">
+              <p class="font-semibold text-sm md:text-lg lg:text-xl xl:text-2xl">Read more</p>
+              <svg class="pb-4 md:pb-2 xl:pb-1 md:w-16 h-10" width="30" height="24" viewBox="0 0 60 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1.5 17L51.5 17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M44.5 24L51.5 17L44.5 10" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </a>
+          </div> 
+        </div>
       </div>
     </div>
     <!-- /BLOG -->
